# fic2-poc-hub_example

./: .bowerrc  Dockerfile  Makefile  README.md  bower.json  requirements.txt  setup.cfg
etc/docker/bower/: Dockerfile  Makefile
etc/docker/nginx/: Dockerfile  Makefile  boot.sh
etc/docker/nginx/nginx/sites-enabled/: hub.conf  site.conf
foobar/: __init__.py  configuration.py  main.py  views.py
foobar/templates/: index.html
hub/: __init__.py  configuration.py  main.py  user.py  views.py
hub/resources/: hub.default.yml  specific_enablers.yml
hub/templates/: error.html  index.html  layout.html
