[metadata]
name = foobar
author = Geoffroy
author-email = geoffroy@tai-lab.org
summary = foobar hub
description-file = README
license = Apache-2
classifier =
    Development Status :: 4 - Beta
        Environment :: Console
        Environment :: OpenStack
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python
	Programming Language :: Python :: 3.3

[files]
packages =
    foobar

[entry_points]
console_scripts =
    foobar-site = foobar.main:main