[metadata]
name = fic2-hub
author = Geoffroy
author-email = geoffroy@tai-lab.org
summary = fic2 hub
description-file = README
license = Apache-2
classifier =
    Development Status :: 4 - Beta
        Environment :: Console
        Environment :: OpenStack
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python
	Programming Language :: Python :: 3.3

[files]
packages =
    hub

[entry_points]
console_scripts =
    fic2-hub = hub.main:main